Linear search and binary search impl